# datasette-assignments-poc

./: .dockerignore  .gitignore  Dockerfile  NOTES.md  README.md  TUTORIAL.md  assignments.db  assignments_data.db  census.db  cities.csv  datasette.yaml  documents.csv  fly.toml  internal.db  requirements-dev.txt  requirements.txt  setup.py
.superpowers/sdd/: task-1-report.md
apps/: census.html  document_review.html
deploy/: entrypoint.sh
docs/superpowers/plans/: 2026-07-14-assignments-phase1.md  2026-07-14-assignments-plugin-phase2.md  2026-07-15-builder-live-studio.md  2026-07-15-image-origins.md  2026-07-15-task-variables.md  (+1 more)
plugins/datasette-assignments/: README.md  pyproject.toml
plugins/datasette-assignments/datasette_assignments/: __init__.py  creator.py  registry.py  render.py  schema.py  views.py
plugins/datasette-assignments/datasette_assignments.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plugins/datasette-assignments/datasette_assignments/static/: builder.css  builder.js
plugins/datasette-assignments/datasette_assignments/templates/: app_template.html  assignments_gallery.html  assignments_list.html  assignments_manage.html  assignments_new.html
plugins/datasette-assignments/tests/: conftest.py  test_append_tasks.py  test_creator.py  test_edit.py  test_gallery.py  test_permissions_views.py  test_registry.py  test_render.py  test_schema.py  test_views_template.py
scripts/: check_city_urls.py  setup_census.py  setup_documents.py  sync_apps.py
tests/: test_setup_census.py  test_sync_apps.py
(+6 files in other folders)
